--- a/ss9/package.json
+++ b/ss9/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Utkarsh049.github.io/ss",
+  "homepage": "https://Utkarsh049.github.io/ss/",
   "name": "ss9",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
