--- a/ss9/package.json
+++ b/ss9/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Utkarsh049.github.io/ss/",
+  "homepage": "https://Utkarsh049.github.io/ss/ss9",
   "name": "ss9",
   "private": true,
   "version": "0.0.0",
